--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,5 @@ zope.interface==7.2
 whitenoise==6.6.0
 cloudinary==1.32.0
 django-cloudinary-storage==0.3.0
+dj-database-url==2.1.0
+psycopg2-binary==2.9.9
