--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,5 @@ cloudinary==1.32.0
 django-cloudinary-storage==0.3.0
 dj-database-url==2.1.0
 psycopg2-binary==2.9.9
+django-i18n-field==1.9.0
+python-dotenv==1.0.0
