--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,36 @@
-attrs==25.3.0
-autobahn==24.4.2
-Automat==25.4.16
-cffi==1.17.1
-channels==4.2.2
-channels_redis==4.2.1
-constantly==23.10.4
-cryptography==44.0.3
-daphne==4.1.2
-Django==5.2
-django-cors-headers==4.7.0
-djangorestframework==3.16.0
-gunicorn==23.0.0
-hyperlink==21.0.0
-idna==3.10
-incremental==24.7.2
-livereload==2.7.1
-msgpack==1.1.0
-packaging==25.0
-pillow==11.2.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pyOpenSSL==25.0.0
-redis==5.2.1
-service-identity==24.2.0
-setuptools==80.3.1
-sqlparse==0.5.3
-tornado==6.4.2
-Twisted==24.11.0
-txaio==23.1.1
-typing_extensions==4.13.2
-tzdata==2025.2
-zope.interface==7.2
-whitenoise==6.6.0
-cloudinary==1.32.0
-django-cloudinary-storage==0.3.0
-dj-database-url==2.1.0
+# Core Django
+Django==5.0.6  # Updated to latest stable LTS version
+django-cors-headers==4.3.1
+djangorestframework==3.15.1
+
+# ASGI/Channels
+channels==4.1.0
+channels-redis==4.2.0
+daphne==4.1.0
+asgiref==3.8.1
+
+# Database
 psycopg2-binary==2.9.9
-django-i18n-field==1.9.0
+dj-database-url==2.1.0
+
+# Static files
+whitenoise==6.6.0
+
+# Cloud storage
+cloudinary==1.38.0
+django-cloudinary-storage==0.4.0
+
+# Security
+cryptography==42.0.5  # Updated to current secure version
+
+# Redis
+redis==5.0.3
+
+# WSGI server
+gunicorn==21.2.0
+
+# Environment
 python-dotenv==1.0.0
+
+# Internationalization
+django-i18n-field==2.0.0
