--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ env/
 *.pot
 *.pyc
 local_settings.py
-db.sqlite3
 
 # Dockerfile
 Dockerfile
@@ -61,3 +60,13 @@ Thumbs.db
 
 # Notes and docs
 notes.md
+
+# all files
+Procfile
+requirements.txt
+manage.py
+users
+base
+companies
+contact
+media
