--- a/project/render.yaml
+++ b/project/render.yaml
@@ -3,6 +3,8 @@ services:
     name: project
     buildCommand: |
       pip install -r requirements.txt
+      python manage.py makemigrations
+      python manage.py makemigrations
       python manage.py migrate
       python manage.py create_render_superuser
     startCommand: gunicorn project.wsgi:application
